--- a/source/Constants.xaml
+++ b/source/Constants.xaml
@@ -31,6 +31,42 @@
     <Color x:Key="GridItemBackgroundColor">#151e3d</Color>
     <Color x:Key="PanelSeparatorColor">#662C3A67</Color>
 
+    
+    <!--region Default Controls background brushes-->
+    <SolidColorBrush x:Key="ButtonBackgroundBrush" Color="Red" />
+    <SolidColorBrush x:Key="CheckboxBackgroundBrush" Color="Red" />
+    <SolidColorBrush x:Key="ComboboxBackgroundBrush" Color="Red" />
+    <SolidColorBrush x:Key="ContextMenuBackgroundBrush" Color="Red" /> <!--Popup-->
+    <SolidColorBrush x:Key="DataGridBackgroundBrush" Color="Red" />
+    <SolidColorBrush x:Key="DataPickerBackgroundBrush" Color="Red" />  <!--Popup-->
+    <SolidColorBrush x:Key="ExpanderBackgroundBrush" Color="Red" />
+    <SolidColorBrush x:Key="GridSplitterBackgroundBrush" Color="Red" />
+    <SolidColorBrush x:Key="GroupBoxBackgroundBrush" Color="Red" />
+    <SolidColorBrush x:Key="ListBoxBackgroundBrush" Color="Red" />
+    <SolidColorBrush x:Key="MenuBackgroundBrush" Color="Red" />
+    <SolidColorBrush x:Key="PasswordBoxBackgroundBrush" Color="Red" />
+    <SolidColorBrush x:Key="ProgressBarBackgroundBrush" Color="Red" />
+    <SolidColorBrush x:Key="RadioButtonBackgroundBrush" Color="Red" />
+    <SolidColorBrush x:Key="RepeatButtonBackgroundBrush" Color="Red" />
+    <SolidColorBrush x:Key="RichTextBoxBackgroundBrush" Color="Red" />
+    <SolidColorBrush x:Key="ScrollViewerBackgroundBrush" Color="Red" />
+    <SolidColorBrush x:Key="SliderBackgroundBrush" Color="Red" />
+    <SolidColorBrush x:Key="TabControlBackgroundBrush" Color="Red" />
+    <SolidColorBrush x:Key="TextBoxBackgroundBrush" Color="Red" />
+    <SolidColorBrush x:Key="ThumbBackgroundBrush" Color="Red" />
+    <SolidColorBrush x:Key="ToggleButtonBackgroundBrush" Color="Red" />
+    <SolidColorBrush x:Key="ToolTipBackgroundBrush" Color="Red" />
+    <!--region end-->
+
+    <!--region Unused Default Controls background brushes-->
+    <SolidColorBrush x:Key="HyperlinkBackgroundBrush" Color="Red" />
+    <SolidColorBrush x:Key="LabelBackgroundBrush" Color="Red" />
+    <SolidColorBrush x:Key="ListViewBackgroundBrush" Color="Red" />
+    <SolidColorBrush x:Key="PopupBackgroundBrush" Color="Red" />
+    <SolidColorBrush x:Key="TextBlockBackgroundBrush" Color="Red" />
+    <SolidColorBrush x:Key="TreeViewBackgroundBrush" Color="Red" />
+    <!--region end-->
+    
     <SolidColorBrush x:Key="ControlBackgroundBrush" Color="Transparent" />
     <SolidColorBrush x:Key="TextBrush" Color="{DynamicResource TextColor}" />
     <SolidColorBrush x:Key="TextBrushDarker" Color="{DynamicResource TextColorDarker}" />
@@ -43,10 +79,9 @@
     <SolidColorBrush x:Key="HighlightGlyphBrush" Color="{DynamicResource HighlightGlyphColor}" />
     <SolidColorBrush x:Key="PopupBorderBrush" Color="{DynamicResource PopupBorderColor}" />
     <SolidColorBrush x:Key="TooltipBackgroundBrush" Color="{DynamicResource BackgroundToneColor}" />
-    <SolidColorBrush x:Key="ButtonBackgroundBrush" Color="#0a0e1e" />
+    
     <SolidColorBrush x:Key="GridItemBackgroundBrush" Color="{DynamicResource GridItemBackgroundColor}" />
     <SolidColorBrush x:Key="PanelSeparatorBrush" Color="{DynamicResource PanelSeparatorColor}" />
-    <SolidColorBrush x:Key="PopupBackgroundBrush" Color="#1f2847" />
     <SolidColorBrush x:Key="CheckBoxCheckMarkBkBrush" Color="{DynamicResource MainColorDark}" />
 
     <SolidColorBrush x:Key="PositiveRatingBrush" Color="#78ffa0" />
@@ -55,10 +90,10 @@
 
     <SolidColorBrush x:Key="WarningBrush" Color="#ff6b6b" />
 
-    <LinearGradientBrush x:Key="ExpanderBackgroundBrush" StartPoint="-0.1,0.5" EndPoint="1.2,1" >
+    <!--<LinearGradientBrush x:Key="ExpanderBackgroundBrush" StartPoint="-0.1,0.5" EndPoint="1.2,1" >
         <GradientStop Color="#FF2C3A67" Offset="0"/>
         <GradientStop Color="#002C3A67" Offset="0.7"/>
-    </LinearGradientBrush>
+    </LinearGradientBrush>-->
 
     <LinearGradientBrush x:Key="WindowBackgourndBrush" StartPoint="0.5,-0.2" EndPoint="0.4,1" >
         <GradientStop Color="#202b4d" Offset="0"/>
