--- a/source/DefaultControls/GridSplitter.xaml
+++ b/source/DefaultControls/GridSplitter.xaml
@@ -7,6 +7,6 @@
                     mc:Ignorable="d">
 
     <Style TargetType="{x:Type GridSplitter}">
-        <Setter Property="Background" Value="{DynamicResource NormalBrushDark}" />
+        <Setter Property="Background" Value="{DynamicResource GridSplitterBackgroundBrush}" />
     </Style>
 </ResourceDictionary>
