--- a/source/DefaultControls/Slider.xaml
+++ b/source/DefaultControls/Slider.xaml
@@ -22,7 +22,7 @@
     
     <Style TargetType="{x:Type Slider}" BasedOn="{StaticResource BaseStyle}">
         <Setter Property="SnapsToDevicePixels" Value="True" />
-        <Setter Property="Background" Value="{DynamicResource ControlBackgroundBrush}" />
+        <Setter Property="Background" Value="{DynamicResource SliderBackgroundBrush}" />
         <Setter Property="BorderBrush" Value="{DynamicResource NormalBorderBrush}" />
         <Setter Property="Template">
             <Setter.Value>
