--- a/source/CustomControls/GameGroupMenu.xaml
+++ b/source/CustomControls/GameGroupMenu.xaml
@@ -3,7 +3,7 @@
 
     <Style TargetType="{x:Type GameGroupMenu}">
         <Setter Property="SnapsToDevicePixels" Value="True" />
-        <Setter Property="Background" Value="{DynamicResource PopupBackgroundBrush}" />
+        <Setter Property="Background" Value="{DynamicResource GameGroupMenuBackgroundBrush}" />
         <Setter Property="BorderBrush" Value="{DynamicResource PopupBorderBrush}" />
         <Setter Property="BorderThickness" Value="{DynamicResource PopupBorderThickness}" />
         <Setter Property="Template">
