--- a/source/CustomControls/ExtendedListBox.xaml
+++ b/source/CustomControls/ExtendedListBox.xaml
@@ -2,6 +2,6 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Style TargetType="{x:Type ExtendedListBox}" BasedOn="{StaticResource {x:Type ListBox}}">
-        <Setter Property="Background" Value="{DynamicResource ControlBackgroundBrush}" />
+        <Setter Property="Background" Value="{DynamicResource ExtendedListBoxBackgroundBrush}" />
     </Style>
 </ResourceDictionary>
