--- a/source/CustomControls/SearchBox.xaml
+++ b/source/CustomControls/SearchBox.xaml
@@ -9,18 +9,20 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type SearchBox}">
-                    <Grid>
-                        <ContentControl x:Name="PART_SeachIcon"
+                    <Border Background="{DynamicResource SearchBoxBackgroundBrush}">
+                        <Grid>
+                            <ContentControl x:Name="PART_SeachIcon"
                                         ContentTemplate="{DynamicResource SearchTextIconTemplate}"
                                         VerticalAlignment="Center" HorizontalAlignment="Left" Margin="5,0,0,0"
                                         Foreground="{DynamicResource TextBrushDarker}" />
-                        <TextBox x:Name="PART_TextInpuText"
+                            <TextBox x:Name="PART_TextInpuText" Background="Transparent" BorderThickness="0"
                                  VerticalContentAlignment="Center" Padding="5,0,25,0"/>
-                        <ContentControl x:Name="PART_ClearTextIcon"
+                            <ContentControl x:Name="PART_ClearTextIcon"
                                         ContentTemplate="{DynamicResource ClearTextIconTemplate}" 
                                         FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,5,0" 
                                         Foreground="{DynamicResource TextBrushDarker}" />
-                    </Grid>
+                        </Grid>
+                    </Border>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
