--- a/source/CustomControls/SidebarItem.xaml
+++ b/source/CustomControls/SidebarItem.xaml
@@ -5,8 +5,8 @@
         <Setter Property="WindowChrome.IsHitTestVisibleInChrome" Value="True" />
         <Setter Property="HorizontalAlignment" Value="Stretch" />
         <Setter Property="VerticalAlignment" Value="Stretch" />
-        <Setter Property="Foreground" Value="#dbdbdb" />
-        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="Foreground" Value="{DynamicResource TextBrush}" />
+        <Setter Property="Background" Value="{DynamicResource SidebarItemBackgroundBrush}" />
         <Setter Property="FocusVisualStyle" Value="{x:Null}" />
         <Setter Property="BorderThickness" Value="3,0,0,0" />
         <Setter Property="Width" Value="44" />
@@ -31,14 +31,15 @@
             </Setter.Value>
         </Setter>
         <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="{DynamicResource SidebarItemIsMouseOverBackgroundBrush}" />
+                <Setter Property="BorderBrush" Value="{DynamicResource GlyphBrush}" />
+            </Trigger>
             <DataTrigger Binding="{Binding Selected}" Value="True">
+                <Setter Property="Background" Value="{DynamicResource SidebarItemIsSelectedBackgroundBrush}" />
                 <Setter Property="Foreground" Value="{DynamicResource GlyphBrush}" />
                 <Setter Property="BorderBrush" Value="{DynamicResource GlyphBrush}" />
             </DataTrigger>
-            <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="{DynamicResource HoverBrush}" />
-                <Setter Property="BorderBrush" Value="{DynamicResource GlyphBrush}" />
-            </Trigger>
             <DataTrigger Binding="{Settings SidebarPosition}" Value="Right">
                 <Setter Property="BorderThickness" Value="0,0,3,0" />
             </DataTrigger>
