--- a/source/CustomControls/SearchBox.xaml
+++ b/source/CustomControls/SearchBox.xaml
@@ -9,7 +9,8 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type SearchBox}">
-                    <Border Background="{DynamicResource SearchBoxBackgroundBrush}">
+                    <Border Background="{DynamicResource SearchBoxBackgroundBrush}"
+                            CornerRadius="{DynamicResource ControlCornerRadius}">
                         <Grid>
                             <ContentControl x:Name="PART_SeachIcon"
                                         ContentTemplate="{DynamicResource SearchTextIconTemplate}"
