--- a/source/DefaultControls/TabControl.xaml
+++ b/source/DefaultControls/TabControl.xaml
@@ -100,11 +100,11 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TabItem}">
                     <Grid x:Name="TabGrid">
-                        <Border x:Name="SelectedBorder" Visibility="Collapsed" Margin="1,0,1,0"
+                        <Border x:Name="SelectedBorder" Visibility="Collapsed" Margin="1,0,1,-1"
                                 SnapsToDevicePixels="True"
                                 BorderThickness="0,0,0,2" BorderBrush="{DynamicResource GlyphBrush}"/>
                         <TextBlock x:Name="TextContent" Padding="5" Style="{DynamicResource BaseTextBlockStyle}"
-                                   Foreground="{TemplateBinding Foreground}">
+                                   Foreground="{TemplateBinding Foreground}" Opacity="0.50">
                             <ContentPresenter x:Name="ContentSite" RecognizesAccessKey="True" ContentSource="Header"
                                               HorizontalAlignment="Center" Margin="5" VerticalAlignment="Center" />
                         </TextBlock>
@@ -120,15 +120,16 @@
                             <Setter Property="BorderThickness" Value="0,2,0,0" TargetName="SelectedBorder" />
                         </Trigger>
                         <Trigger Property="IsSelected" Value="True">
-                            <Setter Property="Foreground" Value="{DynamicResource GlyphBrush}" TargetName="TextContent"/>
+                            <!--<Setter Property="Foreground" Value="{DynamicResource GlyphBrush}" TargetName="TextContent"/>-->
+                            <Setter Property="Opacity" Value="1" TargetName="TextContent"/>
                         </Trigger>
                         <Trigger Property="IsMouseOver" Value="True">
                             <Setter Property="Visibility" Value="Visible" TargetName="SelectedBorder" />
-                            <Setter Property="Opacity" Value="1" TargetName="TextContent"/>
+                            <Setter Property="Opacity" Value="0.50" TargetName="TextContent"/>
                         </Trigger>
                         <Trigger Property="IsFocused" Value="True">
                             <Setter Property="Visibility" Value="Visible" TargetName="SelectedBorder" />
-                            <Setter Property="BorderThickness" Value="1,1,1,1" TargetName="SelectedBorder" />
+                            <Setter Property="BorderThickness" Value="0,0,0,2" TargetName="SelectedBorder" />
                             <Setter Property="Opacity" Value="1" TargetName="TextContent"/>
                         </Trigger>
                         <Trigger Property="IsSelected" Value="True">
